# Test-world

./: README.md  Untitled Diagram.drawio  tt.c
ptGraph/: CMakeLists.txt  globals.cuh  gpu_kernels.cu  gpu_kernels.cuh  main.cu
